--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
 #dependencies
 /node_modules
+Services/node_modules/
 /.php
 /.tif
-*/.meta
-*/*.meta
+/.tga
+
+
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uilds/
+[Ss]erverData/
+[Aa]ssetBundles/
+[Ll]ogs/
+[Uu]serSettings/
+.idea/
+*.pidb
+*.userprefs
+*.orig
+*.apk
+*.vsconfig
+
+[Aa]ssets/StreamingAssets/
+[Aa]ssets/Plugins/
+
+.vs/
+
 /Assets/Art/Model/Off(DontLoadToGit)
 Assets/Art/Textures/Skybox(DontLoadToGit)
 
